# isar-robot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  =  Dockerfile  Makefile  README.md  catalog-info.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql.yml  compile_python_requirements_and_create_pr.yml  compile_requirements.yml  deploy_to_development.yml  deploy_to_staging.yml  pip_compile.yml  publish_component.yml  publish_docker_image.yml  pythonpackage.yml  pythonpublish.yml  repository_dispatch_on_merge.yml  snyk_check.yml  test_and_lint.yml  test_and_lint_python_package.yml  update_aurora_deployment.yml
src/isar_robot/: __init__.py  inspections.py  robotinterface.py  simulation.py  telemetry.py  utilities.py
src/isar_robot/config/: settings.env  settings.py
src/isar_robot/example_data/: example_thermal_image.fff
tests/: test_inspections.py  test_robotinterface.py  test_telemetry.py
tests/interfaces/: test_robotinterface.py
