[tool.poetry]
name = "isar-robot"
version = "1.3.12"
description = "Integration and Supervisory control of Autonomous Robots - Open source robot implementation"
authors = ["Equinor ASA <fg_robots_dev@equinor.com>"]
readme = ["README.md", "LICENSE"]
repository = "https://github.com/equinor/isar-robot"

classifiers = [
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = "^3.9, <3.13"
alitra = ">=1.1.0"
isar = "^1.16.8"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
mypy = "^1.6.1"
pre-commit = "^3.5.0"
pytest = "^7.4.3"

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "Test"
python_functions = "test* test_*"
testpaths = "tests"
log_cli = true
norecursedirs = ["integration"]

[tool.mypy]
follow_imports = "normal"
no_strict_optional = true
no_site_packages = true
ignore_missing_imports = true
exclude = "build"

[tool.pdm]
package-dir = "src"
[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
