[build-system]
requires = ["setuptools>=64.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "isar-robot"
authors = [{ name = "Equinor ASA", email = "fg_robots_dev@equinor.com" }]
description = "Integration and Supervisory control of Autonomous Robots - Open source robot implementation"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["alitra", "isar>=1.25.9"]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/equinor/isar-robot.git"

[project.optional-dependencies]
dev = ["black", "mypy", "pip-tools", "pre-commit", "pytest", "ruff"]

[tool.setuptools_scm]
version_file = "src/isar_robot/version.py"

[tool.mypy]
no_strict_optional = true
no_site_packages = true
ignore_missing_imports = true
exclude = ["build"]
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true

[tool.black]
line_length = 88
